--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.profile.active=dev
+spring.profile.active=dev,test,prod
 spring.datasource.url=jdbc:mysql://localhost:3306/priorymed_api
 spring.datasource.username=root
-spring.datasource.password=SamarritaSQL!
+spring.datasource.password=****
 api.security.secret=${JWT-SECRET:123456}
 
 server.error.include-stacktrace=never
